// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RunButton matches snapshot loading state 1`] = `
<div
  class="bp4-button-group run-button"
>
  <button
    class="bp4-button bp4-disabled bp4-intent-primary"
    disabled=""
    tabindex="-1"
    type="button"
  >
    <span
      aria-hidden="true"
      class="bp4-icon bp4-icon-caret-right"
      icon="caret-right"
      tabindex="-1"
    >
      <svg
        data-icon="caret-right"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M11 8c0-.15-.07-.28-.17-.37l-4-3.5A.495.495 0 006 4.5v7a.495.495 0 00.83.37l4-3.5c.1-.09.17-.22.17-.37z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="bp4-button-text"
    >
      Run
    </span>
  </button>
  <span
    aria-haspopup="true"
    class="bp4-popover2-target"
  >
    <button
      class="bp4-button bp4-intent-primary"
      type="button"
    >
      <span
        aria-hidden="true"
        class="bp4-icon bp4-icon-more"
        icon="more"
        tabindex="0"
      >
        <svg
          data-icon="more"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </span>
</div>
`;

exports[`RunButton matches snapshot non-loading state 1`] = `
<div
  class="bp4-button-group run-button"
>
  <button
    class="bp4-button bp4-intent-primary"
    type="button"
  >
    <span
      aria-hidden="true"
      class="bp4-icon bp4-icon-caret-right"
      icon="caret-right"
      tabindex="-1"
    >
      <svg
        data-icon="caret-right"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M11 8c0-.15-.07-.28-.17-.37l-4-3.5A.495.495 0 006 4.5v7a.495.495 0 00.83.37l4-3.5c.1-.09.17-.22.17-.37z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="bp4-button-text"
    >
      Run
    </span>
  </button>
  <span
    aria-haspopup="true"
    class="bp4-popover2-target"
  >
    <button
      class="bp4-button bp4-intent-primary"
      type="button"
    >
      <span
        aria-hidden="true"
        class="bp4-icon bp4-icon-more"
        icon="more"
        tabindex="0"
      >
        <svg
          data-icon="more"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </span>
</div>
`;
